; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_random_distort_image.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_random_distort_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @random_distort_image(i32 %0, float %1, float %2, float %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  store i32 %0, i32* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %12 = load float, float* %6, align 4
  %13 = fneg float %12
  %14 = load float, float* %6, align 4
  %15 = call float @rand_uniform(float %13, float %14)
  store float %15, float* %9, align 4
  %16 = load float, float* %7, align 4
  %17 = call float @rand_scale(float %16)
  store float %17, float* %10, align 4
  %18 = load float, float* %8, align 4
  %19 = call float @rand_scale(float %18)
  store float %19, float* %11, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load float, float* %9, align 4
  %22 = load float, float* %10, align 4
  %23 = load float, float* %11, align 4
  %24 = call i32 @distort_image(i32 %20, float %21, float %22, float %23)
  ret void
}

declare dso_local float @rand_uniform(float, float) #1

declare dso_local float @rand_scale(float) #1

declare dso_local i32 @distort_image(i32, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
